correciones en general

--- a/nosotros.html
+++ b/nosotros.html
@@ -11,12 +11,14 @@
 <body>
     <header class="header nosotros">
         <div class="header__barra contenedor">
-            <div class="header__logo">
-                <picture>
-                    <source srcset="/build/img/skynet-logo-2.avif" type="image/avif">
-                    <source srcset="build/img/skynet-logo-2.webp" type="image/webp">
-                    <img src="/build/img/skynet-logo-2.png" alt="imagen de camara">
-                </picture>
+            <div class="header__logo logo-2">
+                <a href="index.html">
+                    <picture>
+                        <source srcset="/build/img/skynet-logo-2.avif" type="image/avif">
+                        <source srcset="build/img/skynet-logo-2.webp" type="image/webp">
+                        <img src="/build/img/skynet-logo-2.png" alt="imagen de camara">
+                    </picture>
+                </a>
             </div>
             <nav class="navegacion">
                 <a href="index.html" class="navegacion__link">Inicio</a>
@@ -61,9 +63,9 @@
             </div>
             <div class="contenedor__imagen">
                 <picture>
-                    <source srcset="/build/img/instalacion.avif" type="image/avif">
-                    <source srcset="build/img/instalacion.webp" type="image/webp">
-                    <img src="/build/img/instalacion.png" alt="imagen de camara">
+                    <source srcset="/build/img/nosotros_2.avif" type="image/avif">
+                    <source srcset="build/img/nosotros_2.webp" type="image/webp">
+                    <img src="/build/img/nosotros_2.png" alt="imagen de camara">
                 </picture>
             </div>
         </div>
@@ -80,9 +82,9 @@
 
             <div class="contenedor__imagen">
                 <picture>
-                    <source srcset="/build/img/cam-hero-2.avif" type="image/avif">
-                    <source srcset="build/img/cam-hero-2.webp" type="image/webp">
-                    <img src="/build/img/cam-hero-2.png" alt="imagen de camara">
+                    <source srcset="/build/img/nosotros_1.avif" type="image/avif">
+                    <source srcset="build/img/nosotros_1.webp" type="image/webp">
+                    <img src="/build/img/nosotros_1.png" alt="imagen de camara">
                 </picture>
             </div>
         </div>
@@ -118,7 +120,7 @@
 
         </div>
 
-        <p class="footer__copyright">Todos los Derechos Reservados Skynet | 2023 <a href="https://silakweb.com.ar" target="_blank"> <span class="silakweb">Diseñado por SilakWeb</span> </a></p>
+        <p class="footer__copyright">Todos los Derechos Reservados Skynet | 2023 <a href="https://tech.silakweb.com.ar" target="_blank"> <span class="silakweb">Diseñado por SilakWeb</span> </a></p>
     </footer>
 </body>
 </html>
