--- a/servicios.html
+++ b/servicios.html
@@ -11,12 +11,14 @@
 <body>
     <header class="header servicios">
         <div class="header__barra contenedor">
-            <div class="header__logo">
-                <picture>
-                    <source srcset="/build/img/skynet-logo-2.avif" type="image/avif">
-                    <source srcset="build/img/skynet-logo-2.webp" type="image/webp">
-                    <img src="/build/img/skynet-logo-2.png" alt="imagen de camara">
-                </picture>
+            <div class="header__logo logo-2">
+                <a href="index.html">
+                    <picture>
+                        <source srcset="/build/img/skynet-logo-2.avif" type="image/avif">
+                        <source srcset="build/img/skynet-logo-2.webp" type="image/webp">
+                        <img src="/build/img/skynet-logo-2.png" alt="imagen de camara">
+                    </picture>
+                </a>
             </div>
             <nav class="navegacion">
                 <a href="index.html" class="navegacion__link">Inicio</a>
@@ -57,21 +59,6 @@
                 <h3>Sistemas de Alarmas</h3>
                 <p>Sistema de Alarma para Hogares y Negocios</p>
                 <p>Sistema de Alarma Vecinal</p>
-            </div>
-        </div>
-        <div class="productos__flex">
-            <div class="productos__imagen">
-                <picture>
-                    <source srcset="/build/img/vigilancia.avif" type="image/avif">
-                    <source srcset="build/img/vigilancia.webp" type="image/webp">
-                    <img src="/build/img/vigilancia.png" alt="imagen de camara">
-                </picture>
-            </div>
-            <div class="productos__descripcion">
-                <h3>Sistema de Monitoreo</h3>
-                <p>Accedé a las imágenes desde un centro
-                    de monitoreo o un dispositivo móvil.
-                </p>
             </div>
         </div>
         <div class="productos__flex">
@@ -124,7 +111,7 @@
             </div>
         </div>
 
-        <p class="footer__copyright">Todos los Derechos Reservados Skynet | 2023 <a href="https://silakweb.com.ar" target="_blank"> <span class="silakweb">Diseñado por SilakWeb</span> </a></p>
+        <p class="footer__copyright">Todos los Derechos Reservados Skynet | 2023 <a href="https://tech.silakweb.com.ar" target="_blank"> <span class="silakweb">Diseñado por SilakWeb</span> </a></p>
     </footer>
 
     
