--- a/contacto.html
+++ b/contacto.html
@@ -13,12 +13,14 @@
 <body>
     <header class="header contacto">
         <div class="header__barra contenedor">
-            <div class="header__logo">
-                <picture>
-                    <source srcset="/build/img/skynet-logo-2.avif" type="image/avif">
-                    <source srcset="build/img/skynet-logo-2.webp" type="image/webp">
-                    <img src="/build/img/skynet-logo-2.png" alt="imagen de camara">
-                </picture>
+            <div class="header__logo logo-2">
+                <a href="index.html">
+                    <picture>
+                        <source srcset="/build/img/skynet-logo-2.avif" type="image/avif">
+                        <source srcset="build/img/skynet-logo-2.webp" type="image/webp">
+                        <img src="/build/img/skynet-logo-2.png" alt="imagen de camara">
+                    </picture>
+                </a>
             </div>
             <nav class="navegacion">
                 <a href="index.html" class="navegacion__link">Inicio</a>
@@ -31,7 +33,7 @@
 
     <div class="formulario contenedor">
         <h2 class="formulario__titulo">Contacto</h2>
-        <h3 class="formulario__subtitulo">Contáctanos y dejanos tus <span>dudas o consultas</span></h3>
+        <h3 class="formulario__subtitulo">Dejanos tu <span>duda o consulta</span></h3>
         <div class="formulario__flex">
             <div class="formulario__imagen">
             </div>
@@ -103,7 +105,7 @@
 
         </div>
 
-        <p class="footer__copyright">Todos los Derechos Reservados Skynet | 2023 <a href="https://silakweb.com.ar" target="_blank"> <span class="silakweb">Diseñado por SilakWeb</span> </a></p>
+        <p class="footer__copyright">Todos los Derechos Reservados Skynet | 2023 <a href="https://tech.silakweb.com.ar" target="_blank"> <span class="silakweb">Diseñado por SilakWeb</span> </a></p>
     </footer>
 </body>
 </html>
