--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
      </div>
 
     <header class="header">
+        <div class="header__principal">
+            <h3> <span class="txt-azul">Sky</span>net</h3>
+        </div>
         <div class="header__barra contenedor">
             <div class="header__logo">
                 <picture>
-                    <source srcset="build/img/skynet-logo-2.avif" type="image/avif">
-                    <source srcset="build/img/skynet-logo-2.webp" type="image/webp">
-                    <img src="build/img/skynet-logo-2.png" alt="logo skynet">
+                    <source srcset="build/img/skynet-logo-1.avif" type="image/avif">
+                    <source srcset="build/img/skynet-logo-1.webp" type="image/webp">
+                    <img src="build/img/skynet-logo-1.png" alt="logo skynet">
                 </picture>
             </div>
             <nav class="navegacion">
@@ -60,51 +63,69 @@
     </header>
 
     <main class="propiedades contenedor">
-        <h2 class="propiedades__heading">Nuestros <span>Productos</span></h2>
+        <h2 class="propiedades__heading">Nuestras <span>Promos</span></h2>
         <div class="propiedades__grid">
             <div class="propiedad">
                 <div class="propiedad__imagen">
-                    <h3 class="propiedad__nombre">Casa de Lujo con 3 cuartos</h3>
+                    <h3 class="propiedad__texto-1">"Hogar Seguro"</h3>
+                    <div class="propiedad__bloque-txt-1">
+                        <p>DVR DE 4 CANALES</p>
+                        <p>1 Cámara 1080 Full HD</p>
+                        <p>Disco Rígido 1 TB</p>
+                        <p>Incluye Conectores</p>
+                        <p>Instalación</p>
+                    </div>
                 </div>
                 <div class="propiedad__contenido">
                     <p class="propiedad__texto">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus, repellat cumque distinctio aliquid placeat libero cum labore, reiciendis fuga quisquam alias magnam, id enim. Magni quos laboriosam mollitia enim.
+                        El combo de seguridad para el hogar incluye 1 DVR y 1 cámara. Proporciona vigilancia constante, grabación de video de alta calidad, detección de movimiento y acceso remoto. Es una solución completa para proteger tu hogar y brindarte tranquilidad.
                     </p>
                     <p class="propiedad__precio">
-                        $1,200,00.00
+                        $ 120.0000
 
                     </p>
-                    <a href="#" class="propiedad__enlace">Cotizar</a>
+                    <a href="#" class="propiedad__enlace">Solicitar Ahora</a>
                 </div>
             </div> <!--.propiedad-->
             <div class="propiedad">
                 <div class="propiedad__imagen">
-                    <h3 class="propiedad__nombre">Casa de Lujo con 3 cuartos</h3>
+                    <h3 class="propiedad__texto-2">"Negocio Seguro"</h3>
+                    <div class="propiedad__bloque-txt-2">
+                        <p>DVR DE 4 CANALES</p>
+                        <p>1 Cámara 1080 Full HD</p>
+                        <p>Disco Rígido 1 TB</p>
+                        <p>Incluye Conectores</p>
+                        <p>Instalación</p>
+                    </div>
                 </div>
                 <div class="propiedad__contenido">
                     <p class="propiedad__texto">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus, repellat cumque distinctio aliquid placeat libero cum labore, reiciendis fuga quisquam alias magnam, id enim. Magni quos laboriosam mollitia enim.
+                        El combo de seguridad para negocios incluye 1 DVR y 2 cámaras. Proporciona vigilancia constante, grabación de video de alta calidad, detección de movimiento y acceso remoto. Es una solución completa para proteger tu negocio, mantener un control visual y brindar tranquilidad.
                     </p>
                     <p class="propiedad__precio">
-                        $1,200,00.00
+                        $ 139.000
 
                     </p>
-                    <a href="#" class="propiedad__enlace">Cotizar</a>
+                    <a href="#" class="propiedad__enlace">Solicitar Ahora</a>
                 </div>
             </div> <!--.propiedad-->
-
         </div>
+        <a href="#" class="propiedad__redirigir">Consultá por otras promos u otros servicios. <span>Click Aquí</span></a>
     </main>
 
     <section class="destacada">
         <div class="destacada__grid contenedor">
+            <div class="destacada__imagen">
+                <img src="/build/img/img-destacada.jpg" alt="imagen destacada">
+            </div>
             <div class="destacada__contenido">
-                <h3 class="destacada__heading">
-                    Producto Destacado
-                </h3>
-                <p class="destacada__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae ea ipsa accusamus sapiente. Itaque explicabo maiores tenetur corrupti aliquid obcaecati vel sequi similique molestiae consequatur accusantium aperiam, esse, asperiores perferendis!</p>
-                <p class="destacada__precio">$1,200,000.00</p>
-                <a href="#" class="destacada__enlace">Cotizar</a>
+                <h3 class="destacada__heading">Cámara EZVIZ 360° INTERIOR</h3>
+                <p class="destacada__texto">Cámara 1080 FullHD de 2 Mpx</p>
+                <p class="destacada__texto">Seguimiento Inteligente</p>
+                <p class="destacada__texto">Slot para Memoria Micro SD - (Incluye tarjeta SD)</p>
+                <p class="destacada__texto">Con audio incluído</p>
+                <p class="destacada__precio">$ 45.000 + IVA</p>
+                <a href="#" class="destacada__enlace">Solicitar Ahora</a>
             </div>
         </div>
     </section>
@@ -133,13 +154,6 @@
                     <source srcset="/build/img/cam-3.avif" type="image/avif">
                     <source srcset="build/img/cam-3.webp" type="image/webp">
                     <img src="/build/img/cam-3.png" alt="imagen de camara">
-                </picture>
-            </div>
-            <div class="camaras__imagen">
-                <picture>
-                    <source srcset="/build/img/cam-4.avif" type="image/avif">
-                    <source srcset="build/img/cam-4.webp" type="image/webp">
-                    <img src="/build/img/cam-4.png" alt="imagen de camara">
                 </picture>
             </div>
         </div>
@@ -258,7 +272,7 @@
 
         </div>
 
-        <p class="footer__copyright">Todos los Derechos Reservados Skynet | 2023 <a href="https://silakweb.com.ar" target="_blank"> <span class="silakweb">Diseñado por SilakWeb</span> </a></p>
+        <p class="footer__copyright">Todos los Derechos Reservados Skynet | 2023 <a href="https://tech.silakweb.com.ar" target="_blank"> <span class="silakweb">Diseñado por SilakWeb</span> </a></p>
     </footer>
 
     <script src="js/app.js"></script>
