correcion logo y wp

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <div id="whatsapp">
-        <a href="https://api.whatsapp.com/send/?phone=3814596629&text=Hola Liliana, quisiera recibir información sobre..."  target="_blank">
+        <a href="https://api.whatsapp.com/send/?phone=3815222222&text=Hola Liliana, quisiera recibir información sobre..."  target="_blank">
             <svg width="80" height="80" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
                 <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
                 <g class="layer">
@@ -29,16 +29,24 @@
      </div>
 
     <header class="header">
-        <div class="header__principal">
-            <h3> <span class="txt-azul">Sky</span>net</h3>
-        </div>
+
         <div class="header__barra contenedor">
-            <div class="header__logo">
+            <!-- <div class="header__logo">
                 <picture>
                     <source srcset="build/img/skynet-logo-1.avif" type="image/avif">
                     <source srcset="build/img/skynet-logo-1.webp" type="image/webp">
                     <img src="build/img/skynet-logo-1.png" alt="logo skynet">
                 </picture>
+            </div> -->
+            <div class="header__principal">
+                <div class="header__logo">
+                    <picture>
+                        <source srcset="build/img/skynet-logo-1.avif" type="image/avif">
+                        <source srcset="build/img/skynet-logo-1.webp" type="image/webp">
+                        <img src="build/img/skynet-logo-1.png" alt="logo skynet">
+                    </picture>
+                </div>
+                <h3> <span class="txt-azul">Sky</span>net</h3>
             </div>
             <nav class="navegacion">
                 <a href="index.html" class="navegacion__link">Inicio</a>
@@ -84,7 +92,7 @@
                         $ 120.0000
 
                     </p>
-                    <a href="#" class="propiedad__enlace">Solicitar Ahora</a>
+                    <a href="https://api.whatsapp.com/send/?phone=3815222222&text=Hola Liliana, quisiera recibir información sobre la Promo Hogar Seguro"  target="_blank" class="propiedad__enlace">Solicitar Ahora</a>
                 </div>
             </div> <!--.propiedad-->
             <div class="propiedad">
@@ -104,13 +112,12 @@
                     </p>
                     <p class="propiedad__precio">
                         $ 139.000
-
                     </p>
-                    <a href="#" class="propiedad__enlace">Solicitar Ahora</a>
+                    <a href="https://api.whatsapp.com/send/?phone=3815222222&text=Hola Liliana, quisiera recibir más info sobre la Promo Negocio Seguro"  target="_blank" class="propiedad__enlace">Solicitar Ahora</a>
                 </div>
             </div> <!--.propiedad-->
         </div>
-        <a href="#" class="propiedad__redirigir">Consultá por otras promos u otros servicios. <span>Click Aquí</span></a>
+        <a href="https://api.whatsapp.com/send/?phone=3815222222&text=Hola Liliana, quisiera saber sobre las demás promos que tienen disponibles."  target="_blank" class="propiedad__redirigir">Consultá por otras promos u otros servicios. <span>Click Aquí</span></a>
     </main>
 
     <section class="destacada">
@@ -125,7 +132,7 @@
                 <p class="destacada__texto">Slot para Memoria Micro SD - (Incluye tarjeta SD)</p>
                 <p class="destacada__texto">Con audio incluído</p>
                 <p class="destacada__precio">$ 45.000 + IVA</p>
-                <a href="#" class="destacada__enlace">Solicitar Ahora</a>
+                <a href="https://api.whatsapp.com/send/?phone=3815222222&text=Hola Liliana, quisiero recibir el producto destacado (EZVIZ 360°)"  target="_blank" class="destacada__enlace">Solicitar Ahora</a>
             </div>
         </div>
     </section>
