--- a/nosotros.html
+++ b/nosotros.html
@@ -58,7 +58,7 @@
                 <p class="contenedor__desc">Cercado perimetral.</p>
                 <p class="contenedor__desc">Solución a problemas técnicos inmediatos.</p>
                 <p class="contenedor__desc">Instalación y reparación de aires acondicionados.</p>
-                <p class="contenedor__desc">Servicio de post venta Venta de accesorios (gabinetes, micrófonos,
+                <p class="contenedor__desc">Servicio de post Venta de accesorios (gabinetes, micrófonos,
                     jaulas anti vandálicas, etc.)</p>
             </div>
             <div class="contenedor__imagen">
