corrigiendo titulos y agregando sec beneficios

--- a/index.html
+++ b/index.html
@@ -165,6 +165,29 @@
             </div>
         </div>
     </section>
+    <div class="contenedor">
+        <h3 class="beneficios__titulo">¿Porqué tener <span>cámaras?</span> </h3>
+    </div>
+    <section class="beneficios">
+        <div class="beneficios__flex contenedor">
+            <div class="beneficios__azul">
+                <div class="beneficios__texto-1">
+                    <p>Las cámaras te permiten monitorear tu hogar y sus alrededores en tiempo real, lo que te brinda tranquilidad y te ayuda a detectar cualquier actividad sospechosa o intrusos.</p>
+                </div>
+                <div class="beneficios__texto-1">
+                    <p>Las cámaras de seguridad te permiten mantener un ojo en tus hijos y tus mascotas cuando no estás en casa, brindándote la tranquilidad de saber que están seguros.</p>
+                </div>
+            </div>
+            <div class="beneficios__blanco">
+                <div class="beneficios__texto-2">
+                    <p> Las cámaras visibles actúan como un disuasivo eficaz para los delincuentes, ya que saben que están siendo vigilados y pueden ser identificados.</p>
+                </div>
+                <div class="beneficios__texto-2">
+                    <p> Muchos sistemas de cámaras de seguridad permiten el acceso remoto a través de dispositivos móviles, lo que te permite vigilar tu propiedad en tiempo real desde cualquier lugar.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <h3 class="slider__titulo contenedor">Nuestros <span>Clientes</span></h3>
     <div class="slider contenedor">
