seccion contacto finalizada - envio de correo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Empresa de Seguridad Electrónica, instalación de sistemas de cámaras para el hogar, negocios y más">
+    <meta name="keywords" content="Seguridad, Cámaras, Electrónica, Sistemas, Hogar, Negocios, Vigilancia, Cuidado, Alarmas Vecinales">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.skynet.com.ar/index.html">
     <title>Skynet - Seguridad Electrónica</title>
     <link rel="shortcut icon" href="/build/img/skynet-logo-1.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,13 +35,6 @@
     <header class="header">
 
         <div class="header__barra contenedor">
-            <!-- <div class="header__logo">
-                <picture>
-                    <source srcset="build/img/skynet-logo-1.avif" type="image/avif">
-                    <source srcset="build/img/skynet-logo-1.webp" type="image/webp">
-                    <img src="build/img/skynet-logo-1.png" alt="logo skynet">
-                </picture>
-            </div> -->
             <div class="header__principal">
                 <div class="header__logo">
                     <picture>
@@ -89,7 +86,7 @@
                         El combo de seguridad para el hogar incluye 1 DVR y 1 cámara. Proporciona vigilancia constante, grabación de video de alta calidad, detección de movimiento y acceso remoto. Es una solución completa para proteger tu hogar y brindarte tranquilidad.
                     </p>
                     <p class="propiedad__precio">
-                        $ 120.0000
+                        $ 120.0000 + IVA
 
                     </p>
                     <a href="https://api.whatsapp.com/send/?phone=3815222222&text=Hola Liliana, quisiera recibir información sobre la Promo Hogar Seguro"  target="_blank" class="propiedad__enlace">Solicitar Ahora</a>
@@ -111,7 +108,7 @@
                         El combo de seguridad para negocios incluye 1 DVR y 2 cámaras. Proporciona vigilancia constante, grabación de video de alta calidad, detección de movimiento y acceso remoto. Es una solución completa para proteger tu negocio, mantener un control visual y brindar tranquilidad.
                     </p>
                     <p class="propiedad__precio">
-                        $ 139.000
+                        $ 139.000 + IVA
                     </p>
                     <a href="https://api.whatsapp.com/send/?phone=3815222222&text=Hola Liliana, quisiera recibir más info sobre la Promo Negocio Seguro"  target="_blank" class="propiedad__enlace">Solicitar Ahora</a>
                 </div>
