agregando enviar copia

--- a/contacto.html
+++ b/contacto.html
@@ -40,6 +40,7 @@
             <div class="formulario__datos">
                 <form target="_blank" action="https://formsubmit.co/23aabaa766d3e70aaefd55d92b0147f6" method="POST">
                     <input type="hidden" name="_template" value="box">
+                    <input type="hidden" name="_cc" value="another@email.com">
                     <input type="hidden" name="_autoresponse" value="Gracias por contactarte con Skynet! Pronto nos pondremos en contacto contigo.">
                     <div class="formulario__campos">
                         <div class="formulario__inputs">
