--- a/contacto.html
+++ b/contacto.html
@@ -216,7 +216,7 @@
   console.log("Mensaje:", mensaje);
 
   // Realiza la solicitud POST a FormSubmit.co para enviar el formulario
-  fetch("https://formsubmit.co/ajax/skynet@silakweb.com.ar", {
+  fetch("https://formsubmit.co/ajax/skynet2023@silakweb.com.ar", {
     method: "POST",
     headers: { 
         'Content-Type': 'application/json',
