--- a/contacto.html
+++ b/contacto.html
@@ -50,6 +50,7 @@
         <div class="formulario__imagen"></div>
         <div class="formulario__datos">
           <form id="miFormulario" method="POST">
+            <input type="hidden" name="_cc" value="claudio91soto@gmail.com">
             <input type="hidden" name="_template" value="box" />
             <input
               type="hidden"
