--- a/contacto.html
+++ b/contacto.html
@@ -50,8 +50,6 @@
         <div class="formulario__imagen"></div>
         <div class="formulario__datos">
           <form id="miFormulario" method="POST">
-            <input type="hidden" name="_cc" value="claudio91soto@gmail.com">
-            <input type="hidden" name="_template" value="box" />
             <input
               type="hidden"
               name="_autoresponse"
@@ -217,7 +215,7 @@
   console.log("Mensaje:", mensaje);
 
   // Realiza la solicitud POST a FormSubmit.co para enviar el formulario
-  fetch("https://formsubmit.co/ajax/skynet@silakweb.com.ar", {
+  fetch("https://formsubmit.co/ajax/silakweb@gmail.com", {
     method: "POST",
     headers: { 
         'Content-Type': 'application/json',
