--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://kit.fontawesome.com/808781cc1c.js" crossorigin="anonymous"></script>
 
 </head>
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-G75B8LT75G"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-G75B8LT75G'); </script>
 <body>
 
     <div id="whatsapp">
