--- a/index.html
+++ b/index.html
@@ -123,45 +123,82 @@
         </div>
       </div>
     </header>
-    <!-- <button id="btnAbrirModal" data-fancybox data-src="#dialog-content">Novedades</button> -->
+    <button id="btnAbrirModal" data-fancybox data-src="#dialog-content">Novedades</button>
+    <button id="btnAbrirModal2" data-fancybox data-src="#dialog-content-promos">Súmate</button>
+
+    <div id="dialog-content-promos" style="display:none;min-width:50vw;min-height: 50wh;">
+      <h3 class="promo-title">Súmate a Skynet</h3>
+      <div class="promo">
+        <a href="build/img/anuncio_skynet.jpeg" data-fancybox="gallery">
+          <img src="build/img/anuncio_skynet.jpeg" />
+        </a>
+      </div>
+    </div>
+    <div style="display: none;" class="promos">
+
+      <div class="promo">
+        <a href="build/img/lider_skynet.jpeg" data-fancybox="gallery">
+          <img src="build/img/lider_skynet.jpeg" />
+        </a>
+      </div>
+      <div class="promo">
+        <a href="build/img/sumate_akynet.jpeg" data-fancybox="gallery">
+          <img src="build/img/sumate_akynet.jpeg" />
+        </a>
+      </div>
+      <div class="promo">
+        <a href="build/img/consultas_skynet.jpeg" data-fancybox="gallery">
+          <img src="build/img/consultas_skynet.jpeg" />
+        </a>        
+      </div>
+
+    </div>
 
   
     <div id="dialog-content" style="display:none;min-width:50vw;min-height: 50wh;">
-      <div style="display:flex;gap: 20px;">
-        <div style="width: 50%;">
-          <h5>Trabajo en Lules</h5>
-
-          <a href="build/img/lules-1.jpg" data-fancybox="gallery-a" data-caption="Gallery A #1">
-            <img style="object-fit: cover;" width="400" height="400" src="build/img/lules-1.jpg" />
+      <h3>Novedades - Skynet</h3>
+      <div class="novedades">
+        <div class="novedad" >
+          <h4>Trabajo Finalizado - Lules</h4>
+          <a href="build/img/lules-2.jpg" data-fancybox="gallery-b" data-caption="Obra finalizada en Lules">
+            <img style="object-fit: cover;" width="400" height="400" src="build/img/lules-2.jpg" />
           </a>
+
         </div>
 
-        <div style="width: 50%;">
-          <h5>Trabajo terminado - Tafi del Valle</h5>
-          <a href="https://lipsum.app/id/4/1024x768" data-fancybox="gallery-b" data-caption="Gallery B #1">
-            <img style="object-fit: cover;" width="400" height="400" src="https://lipsum.app/id/4/200x150" />
+        <div class="novedad">
+          <h4>Trabajo Finalizado - Tafi del Valle</h5>
+          <a href="build/img/ts_1.jpg" data-fancybox="gallery-a" data-caption="Obra finalizada en Tafí del Valle">
+            <img style="object-fit: cover;" width="400" height="400" src="build/img/ts_1.jpg" />
           </a>
         </div>
+      </div> 
       </div>
 
-
+      
       <div style="display:none">
-        <a href="build/img/lules-2.jpg" data-fancybox="gallery-a" data-caption="Gallery A #2">
-          <img src="build/img/lules-2.jpg" />
+
+        <a href="build/img/lules-1.jpg" data-fancybox="gallery-b" data-caption="Trabajo terminado por Skynet en San Isidro de Lules">
+          <img src="build/img/lules-1.jpg" />
         </a>
-        <a href="build/img/lules-3.jpg" data-fancybox="gallery-a" data-caption="Gallery A #3">
-          <img src="build/img/lules-3.jpg" />
+
+        <a href="build/img/lules-4.jpg" data-fancybox="gallery-b" data-caption="Trabajo terminado por Skynet en San Isidro de Lules">
+          <img src="build/img/lules-4.jpg" />
         </a>
       </div>
 
       <div style="display:none">
-
-        <a href="https://lipsum.app/id/5/1024x768" data-fancybox="gallery-b" data-caption="Gallery B #2">
-          <img src="https://lipsum.app/id/5/200x150" />
+        <a href="build/img/ts_2.jpg" data-fancybox="gallery-a" data-caption="Trabajo realizado por Skynet en Tafí del Valle">
+          <img src="build/img/ts_2.jpg" />
         </a>
-
-        <a href="https://lipsum.app/id/6/1024x768" data-fancybox="gallery-b" data-caption="Gallery B #3">
-          <img src="https://lipsum.app/id/6/200x150" />
+        <a href="build/img/ts_3.jpg" data-fancybox="gallery-a" data-caption="Trabajo realizado por Skynet en Tafí del Valle">
+          <img src="build/img/ts_3.jpg" />
+        </a>
+        <a href="build/img/ts_4.jpg" data-fancybox="gallery-a" data-caption="Trabajo realizado por Skynet en Tafí del Valle">
+          <img src="build/img/ts_4.jpg" />
+        </a>
+        <a href="build/img/ts_5.jpg" data-fancybox="gallery-a" data-caption="Trabajo realizado por Skynet en Tafí del Valle">
+          <img src="build/img/ts_5.jpg" />
         </a>
       </div>
 
