agregando caption a img

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
       <div class="promo">
         <a href="build/img/anuncio_skynet.jpeg" data-fancybox="gallery">
           <img src="build/img/anuncio_skynet.jpeg" />
+          <p class="p-caption">
+            <caption>Click para ver más</caption>
+          </p>
         </a>
       </div>
     </div>
@@ -162,6 +165,9 @@
           <h4>Trabajo Finalizado - Lules</h4>
           <a href="build/img/lules-2.jpg" data-fancybox="gallery-b" data-caption="Obra finalizada en Lules">
             <img style="object-fit: cover;" width="400" height="400" src="build/img/lules-2.jpg" />
+            <p class="p-caption">
+              <caption>Click para ver más</caption>
+            </p>
           </a>
 
         </div>
@@ -170,6 +176,9 @@
           <h4>Trabajo Finalizado - Tafi del Valle</h5>
           <a href="build/img/ts_1.jpg" data-fancybox="gallery-a" data-caption="Obra finalizada en Tafí del Valle">
             <img style="object-fit: cover;" width="400" height="400" src="build/img/ts_1.jpg" />
+            <p class="p-caption">
+              <caption>Click para ver más</caption>
+            </p>
           </a>
         </div>
       </div> 
