agregando info meta

--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,11 @@
     })();
   </script>
 
-    <title>Skynet - Contacto</title>
+    <title>Skynet Norte - Contacto</title>
+    <meta
+    name="description"
+    content="Skynet Norte - Sección de contacto con la empresa Skynet"
+  />
   </head>
   <body>
     <header class="header contacto">
