--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Empresa de Seguridad Electrónica, instalación de sistemas de cámaras para el hogar, negocios y más"
-    />
-    <meta
-      name="keywords"
-      content="Seguridad, Cámaras, Electrónica, Sistemas, Hogar, Negocios, Vigilancia, Cuidado, Alarmas Vecinales"
+      content="Skynet Norte Empresa de Seguridad Electrónica, instalación de sistemas de cámaras para el hogar, negocios y más"
     />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.skynet.com.ar/index.html" />
-    <title>Skynet - Seguridad Electrónica</title>
+    <title>Skynet Norte - Seguridad Electrónica</title>
     <link
       rel="shortcut icon"
       href="/build/img/skynet-logo-1.png"
@@ -129,8 +125,8 @@
     <div id="dialog-content-promos" style="display:none;min-width:50vw;min-height: 50wh;">
       <h3 class="promo-title">Súmate a Skynet</h3>
       <div class="promo">
-        <a href="build/img/anuncio_skynet.jpeg" data-fancybox="gallery">
-          <img src="build/img/anuncio_skynet.jpeg" />
+        <a href="build/img/promo-unicom-1.jpg" data-fancybox="gallery">
+          <img src="build/img/promo-unicom-1.jpg" />
           <p class="p-caption">
             <caption>Click para ver más</caption>
           </p>
@@ -139,6 +135,11 @@
     </div>
     <div style="display: none;" class="promos">
 
+      <div class="promo">
+        <a href="build/img/anuncio_skynet.jpeg" data-fancybox="gallery">
+          <img src="build/img/lider_skynet.jpeg" />
+        </a>
+      </div>
       <div class="promo">
         <a href="build/img/lider_skynet.jpeg" data-fancybox="gallery">
           <img src="build/img/lider_skynet.jpeg" />
@@ -348,16 +349,15 @@
         <div class="beneficios__azul">
           <div class="beneficios__texto-1">
             <p>
-              Las cámaras te permiten monitorear tu hogar y sus alrededores en
-              tiempo real, lo que te brinda tranquilidad y te ayuda a detectar
-              cualquier actividad sospechosa o intrusos.
+              Las cámaras de seguridad son una herramienta fundamental para controlar cualquier movimiento
+               dentro de tu negocio desde cualquier lugar.
             </p>
           </div>
           <div class="beneficios__texto-1">
             <p>
-              Las cámaras de seguridad te permiten mantener un ojo en tus hijos
-              y tus mascotas cuando no estás en casa, brindándote la
-              tranquilidad de saber que están seguros.
+              Puede resultar irrelevante, pero la falta de seguridad en un negocio puede reducir el
+              rendimiento laboral de los empleados, además de que muchos empleados preferirían trabajar 
+              bajo la vigilancia de sistemas de seguridad ante cualquier eventualidad.
             </p>
           </div>
         </div>
