--- a/nosotros.html
+++ b/nosotros.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/build/img/skynet-logo-1.png" type="image/x-icon">
     <link rel="stylesheet" href="build/css/app.css">
-    <title>Skynet - Nosotros</title>
+    <title>Skynet Norte - Acerca de nosotros</title>
+    <meta
+    name="description"
+    content="Skynet Norte - Sección para poder saber todo sobre la empresa Skynet"
+  />
 </head>
 <body>
     <header class="header nosotros">
