--- a/servicios.html
+++ b/servicios.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/build/img/skynet-logo-1.png" type="image/x-icon">
     <link rel="stylesheet" href="build/css/app.css">
-    <title>Skynet - Servicios</title>
+    <title>Skynet Norte - Servicios</title>
+    <meta
+    name="description"
+    content="Skynet Norte - Aquí podrás ver todos los servicios que presta la empresa Skynet"
+  />
 </head>
 <body>
     <header class="header servicios">
